--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.41.5"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
